# flask-restful-api

./: app.py  pyproject.toml  users.py
api/: views.py
api/resources/: user.py
